# multicloud-diagrams

./: .$draft.drawio.bkp  .gitignore  CHANGELOG.MD  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  extractor.py  gen_images.sh  landscape.drawio  pyproject.toml  resize_icons.sh  template.MD
.github/: FUNDING.yml
docs/: CHANGELOG.md  Gemfile  _config.yml  index.md
multicloud_diagrams/: __init__.py
samples/: landscape.json  landscape.py  pyproject.toml
samples/output/: iam_output.prod.iam-roles.drawio  output.prod.dynamo.drawio  output.prod.end2end.drawio  output.prod.iam-roles-from-yaml.drawio  output.prod.iam-roles.drawio  output.prod_features.drawio  output.prod_layers.drawio  output.prod_plantuml.adr.drawio  output.prod_plantuml.end2end.drawio  output.prod_plantuml.https.adr.drawio  output.prod_plantuml_2_entities.end2end.drawio  output.prod_plantuml_2_entities_2uml.end2end.drawio  output.prod_uml.end2end.drawio
samples/output/history/2024/02/: output.prod.iam-roles-from-yaml.20240224.103704.drawio
samples/samples/: ADR.MD  augmented_resources.yaml  augmented_resources2.yaml  augmented_resources3.yaml  aws_dynamo.py  aws_dynamo_boto3_response.py  aws_features_uml.py  aws_iam_from_yaml.py  aws_iam_from_yaml_history.py  aws_iam_roles.py  aws_iam_roles_from_code.py  aws_iam_roles_from_code_with_enum.py  aws_layers.py  aws_mermaid_uml.py  aws_plant_uml.py  aws_plant_uml_2_entities.py  aws_plant_uml_2_entities_2umls.py  aws_plant_uml_from_https.py  aws_plant_uml_from_md.py  aws_service_end_2_end.py  features.plantuml  file_upload.mermaid  file_upload.plantuml  l1-services.yml  l2-data.yml  l3-stream.yml  process.mermaid  process.plantuml  same_entity_diff_elements.plantuml  same_entity_diff_elements.yaml  same_entity_diff_elements2.plantuml  uml.mermaid  uml_mapping.yml
samples/tests/: test___init__.py  test_actor_extract_.py  test_resource_endpoint.py
tests/: 3_layers.drawio  test___init__.py  test_adding_note.py  test_aws_vertecies.py  test_colors.py  test_connections.py  test_icons_generation.py  test_layers.py  test_list.py  test_map.py  test_mcd.py  test_utils.py  test_yaml.py
tmp/: diagram.drawio
(+542 files in other folders)
