[tool.poetry]
name = "multicloud-diagrams"
version = "0.3.5"
description = "Library to generate DRAW.IO compatible diagrams to represent Cloud infrastructure. AWS Cloud supported."
authors = ["Roman Tsypuk <tsypuk.conf@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "multicloud_diagrams"}]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
git-changelog = "^1.0.1"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
