[tool.poetry]
name = "multicloud-diagrams"
version = "0.3.18"
description = "Library to generate DRAW.IO compatible diagrams to represent Cloud infrastructure. AWS Cloud supported."
authors = ["Roman Tsypuk <tsypuk.conf@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "multicloud_diagrams"}]

[tool.poetry.dependencies]
python = "^3.7"
pyyaml = "^6.0"

[tool.poetry.dev-dependencies]
flakehell = "^0.9.0"
flake8 = "3.9.0"

[tool.poetry.group.dev.dependencies]
git-changelog = "^1.0.1"
jinja2 = "^3.1.2"

[tool.flakehell]
exclude = ["README.md", "./venv/", "./docs"]
format = "colored"
max_line_length = 88
show_source = true

[tool.flakehell.plugins]
flake8-bandit = ["+*", "-S322"]
flake8-bugbear = ["+*"]
flake8-builtins = ["+*"]
flake8-comprehensions = ["+*"]
flake8-darglint = ["+*"]
flake8-docstrings = ["+*"]
flake8-eradicate = ["+*"]
flake8-isort = ["+*"]
flake8-mutable = ["+*"]
flake8-pytest-style = ["+*"]
flake8-spellcheck = ["+*"]
mccabe = ["+*"]
pep8-naming = ["+*"]
pycodestyle = ["+*", "-E501"]
pyflakes = ["+*"]
pylint = ["+*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
